[package]
name = "rutie-test"
version = "0.1.0"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
description = "Helpers to test code written with `rutie`."
readme = "README.md"
repository = "https://github.com/wasmerio/wasmer-ruby"
keywords = ["ruby", "extension"]
publish = false