[package]
name = "wasmer"
version = "0.5.0"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
description = "Ruby extension to run WebAssembly binaries"
readme = "README.md"
repository = "https://github.com/wasmerio/wasmer-ruby"
keywords = ["ruby", "extension", "webassembly"]
categories = ["wasm"]
publish = false

[lib]
name = "wasmer_ruby"
crate-type = ["dylib", "rlib"]

[dependencies]
wasmer = "2.0"
wasmer-wasi = "2.0"
rutie = "0.8"
rutie-derive = { path = "../rutie-derive", version = "0.1.0" }
lazy_static = "1.4"
wat = "1.0"
wasmprinter = "0.2"

[dev-dependencies]
rutie-test = { path = "../rutie-test", version = "0.1.0" }